# fizix

./: .gitmodules  CMakeLists.txt  main.cpp
assets/shaders/: basic_color_frag.glsl  basic_color_vert.glsl  shadow_vert.glsl  text2d_frag.glsl  text2d_geom.glsl  text2d_vert.glsl
core/: CMakeLists.txt
core/include/: color_material.h  controllers.h  draw2d.h  event.h  events.h  geometry.h  gl.h  hardware_constants.h  lib.h  logging.h  mesh.h  player.h  shader.h  shader_constants.h  texture.h  traits.h  unique_handle.h  util.h  world.h
core/include/data_formats/: parsing.h
core/include/physics/: constraints.h  math.h  math_util.h  rigid_body.h
core/include/physics/collision/: algorithm.h  algorithms.h  contact.h  primitive.h  primitives.h  vclip.h
core/include/platform/: platform.h  windows.h
core/src/: camera.cpp  color_material.cpp  directional_light.cpp  draw2d.cpp  flashlight.cpp  gdi_plus_context.cpp  geometry.cpp  gl.cpp  hardware_constants.cpp  instanced_mesh.cpp  key_controller.cpp  lib.cpp  logging.cpp  mesh.cpp  mouse_controller.cpp  phong_color_material.cpp  physical_particle_emitter.cpp  player.cpp  point_light.cpp  screen_controller.cpp  shader_program.cpp  shader_store.cpp  shapes.cpp  spotlight.cpp  texture.cpp  texture_store.cpp  traits.cpp  world.cpp
core/src/data_formats/: base64.cpp  ipaddr.cpp  json.cpp  parsing.cpp  uri.cpp
core/src/physics/: constraint.cpp  math.cpp  math_util.cpp  particle.cpp  particle_force_registry.cpp  particle_world.cpp  rigid_body.cpp
core/src/physics/collision/: algorithms.cpp  bounding_volumes.cpp  contact.cpp  contact_generator.cpp  primitive.cpp  primitives.cpp  vclip.cpp
core/src/physics/constraints/: distance_constraint.cpp  particle_collision_constraint.cpp  plane_collision_constraint.cpp
core/src/physics/force_generators/: particle_anchored_spring.cpp  particle_drag.cpp  particle_gravity.cpp  particle_spring.cpp  rigid_body_gravity.cpp
core/src/platform/: windows.cpp
core/src/platform/windows/: windows.cpp
fcad/: CMakeLists.txt  README.md  fcad.rc  main.cpp
fcad/include/: action.h  camera_controller.h  command.h  command_controller.h  command_history_controller.h  commands.h  fcad_events.h  geometry_controller.h  helpers.h  mode_controller.h  parsing.h  window_action_controller.h
fcad/include/actions/: create.h  delete.h  misc.h
fcad/include/controllers/: action.h  camera.h  clipboard.h  command.h  command_history.h  edit_history.h  file.h  geometry.h  mode.h  parameter.h  preferences.h
fcad/include/fcad_platform/: platform.h  resource.h  windows.h
fcad/include/parameter/: ast.h  eval.h  parser.h
fcad/src/: action.cpp  axes_controller.cpp  camera_controller.cpp  command_controller.cpp  command_history_controller.cpp  geometry_controller.cpp  helpers.cpp  mode_controller.cpp  parsing.cpp  window_action_controller.cpp
fcad/src/actions/: create.cpp  delete.cpp  misc.cpp
fcad/src/commands/: create_edge.cpp  create_face.cpp  create_vertex.cpp  delete_edge.cpp  delete_face.cpp  delete_group.cpp  delete_vertex.cpp  flip.cpp  focus.cpp  help.cpp  labels.cpp  labeltype.cpp  let.cpp  load_replay_file.cpp  move_group.cpp  noop.cpp  paste.cpp  pref.cpp  quit.cpp  read_file.cpp  set.cpp  vertex_info.cpp  write_file.cpp  write_replay_file.cpp  yank_face.cpp  yank_group.cpp
fcad/src/controllers/: action.cpp  axes.cpp  camera.cpp  clipboard.cpp  command.cpp  command_history.cpp  edit_history.cpp  file.cpp  geometry.cpp  mode.cpp  parameter.cpp  preferences.cpp  stl.cpp
fcad/src/fcad_platform/: windows.cpp
fcad/src/parameter/: ast.cpp  eval.cpp  parser.cpp
phong_demo/: CMakeLists.txt  main.cpp
soft_physics_demo/: CMakeLists.txt  main.cpp
soft_physics_demo/include/: connector_spawn_tool.h  constants.h  custom_events.h  gui.h  object_world.h  particle_collision_constraint_generator.h  particle_spawn_tool.h  particle_utils.h  pointer_tool.h  raycast.h  tools.h
soft_physics_demo/src/: connector_spawn_tool.cpp  constants.cpp  gui.cpp  particle_spawn_tool.cpp  pointer_tool.cpp  raycast.cpp  tools.cpp
tests/: CMakeLists.txt  main.cpp
tests/include/: matchers.h  setup.h
tests/src/: base64_test.cpp  bvh_test.cpp  collision_test.cpp  geometry_test.cpp  ipaddr_test.cpp  json_test.cpp  matchers.cpp  setup.cpp  uri_test.cpp
